--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
       </nav> 
     </header>
 
+    <div class="app">
+      <div class="form-box">
+        <h2>Login</h2>
+        <form action="#">
+          <div class="input-box">
+            <span class="icon"></span>
+            <input type="email" required>
+            <label>Email</label>
+          </div>
+          <div class="input-box">
+            <span class="icon"></span>
+            <input type="password" required>
+            <label>password</label>
+          </div>
+        </form>
+      </div>
+    </div>
   <script src="script.js"></script>
   </body>
 </html>
