--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
   </head>
 
   <body>
-<!-- <img src="ideas.jpg" alt="image" width="60%"> -->
+    <!-- <img src="ideas.jpg" alt="image" width="60%"> -->
 
     <header>
       <h2 class="logo">Logo</h2>
@@ -19,13 +22,14 @@
         <a href="#">Services</a>
         <a href="#">Contact</a>
         <button class="btn-login">Login</button>
-      </nav> 
-      <nav class="navbar navbar-expand-md ">
+      </nav>
+      <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
           <a href="#" class="navbar-brand">Logo</a>
-          <button class="navbar-toggler"
-          data-bs-toggle="collapse"
-          data-bs-target=".navbar-collapse"
+          <button
+            class="navbar-toggler"
+            data-bs-toggle="collapse"
+            data-bs-target=".navbar-collapse"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -56,20 +60,19 @@
         <form action="#">
           <div class="input-box">
             <span class="icon"></span>
-            <input type="email" required>
+            <input type="email" required />
             <label>Email</label>
           </div>
           <div class="input-box">
             <span class="icon"></span>
-            <input type="password" required>
+            <input type="password" required />
             <label>password</label>
           </div>
         </form>
       </div>
     </div>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 
-  <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
